--- a/Images_and_Links_in_HTML/index.html
+++ b/Images_and_Links_in_HTML/index.html
@@ -5,7 +5,7 @@
     <title>
 	The Fox Information Depot
     </title>
-	  <link rel="shortcut icon" href="redfox.png" type="image/png">
+	  <link rel="shortcut icon" href="redfox.jpg" type="image/jpg">
   </head>
   <body>
    <body>
